--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>COPELIA</title>
-    </head>
+   this is the copelia website bitch </head>
     <body>
-
+Estamos de operacion bikini.
     </body>
 </html>
