upated with paragraph separation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>COPELIA</title>
    this is the copelia website bitch </head>
     <body>
-Estamos de operacion bikini.
+        <p>Estamos de operacion bikini.</p>
     </body>
 </html>
