--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" href="#">Copelia</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -79,25 +79,25 @@
 
         <div class="row">
             <div class="col-sm-8">
-                <h2>What We Do</h2>
-                <p>Introduce the visitor to the business using clear, informative text. Use well-targeted keywords within your sentences to make sure search engines can find the business.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et molestiae similique eligendi reiciendis sunt distinctio odit? Quia, neque, ipsa, adipisci quisquam ullam deserunt accusantium illo iste exercitationem nemo voluptates asperiores.</p>
+                <h2>Quien somos</h2>
+                <p>Somos dos apasionados por la literatura y nos gusta tratar a todos como iguales, excepto los hombres heteronormativos blancos, que tienen mucho privilegio ya hombre. suficiente no?.</p>
+                <p>se va haber un follon</p>
                 <p>
                     <a class="btn btn-default btn-lg" href="#">Call to Action &raquo;</a>
                 </p>
             </div>
             <div class="col-sm-4">
-                <h2>Contact Us</h2>
+                <h2>Contacta con nosotros</h2>
                 <address>
-                    <strong>Start Bootstrap</strong>
-                    <br>3481 Melrose Place
-                    <br>Beverly Hills, CA 90210
+                    <strong>Copelia books</strong>
+                    <br>Calle donde estamos
+                    <br>lo de mas de la direccion
                     <br>
                 </address>
                 <address>
                     <abbr title="Phone">P:</abbr>(123) 456-7890
                     <br>
-                    <abbr title="Email">E:</abbr> <a href="mailto:#">name@example.com</a>
+                    <abbr title="Email">E:</abbr> <a href="mailto:#">nombre@example.com</a>
                 </address>
             </div>
         </div>
@@ -107,9 +107,9 @@
 
         <div class="row">
             <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
-                <h2>Marketing Box #1</h2>
-                <p>These marketing boxes are a great place to put some information. These can contain summaries of what the company does, promotional information, or anything else that is relevant to the company. These will usually be below-the-fold.</p>
+                <img class="img-circle img-responsive img-center" src="https://media4.giphy.com/media/AP8IYd4EAqY8M/giphy.gif" alt="">
+                <h2>Mira nuestro ultimo libro</h2>
+                <p>Este libro ca del culo de la kim kardashian que tiene vida propia</p>
             </div>
             <div class="col-sm-4">
                 <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
