--- a/index.html
+++ b/index.html
@@ -112,14 +112,16 @@
                 <p>Este libro ca del culo de la kim kardashian que tiene vida propia</p>
             </div>
             <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
-                <h2>Marketing Box #2</h2>
-                <p>The images are set to be circular and responsive. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+                <img class="img-circle img-responsive img-center" src="https://img.clipartfest.com/b7039115e52e5736a8fc15dd9bb584d3_donald-trump-donald-oconnor-memes-donald-trump_2000-1000.jpeg" alt="">
+                <h2>Trump no lee libros, quieres no ser como el? Lee estos 10 libros que recomendamos</h2>
+                <p>1. 1984
+                2. el libro que tiene como titulo un emoji
+                3. pincha en la imagen o algo para ver todo el articulo o yo que se</p>
             </div>
             <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
-                <h2>Marketing Box #3</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+                <img class="img-circle img-responsive img-center" src="http://4.darkroom.shortlist.com/980/478b52199067f0e6645e8e241a907499:e965ef53023c50dfc2ce9e9d979f8457/shit-trophy.jpg" alt="">
+                <h2>Porque nuestros libros son los mejores - un mensaje de parte de el editor </h2>
+                <p>Dmirad que chulo el trofeo que ganamos por ser los mejores de todos en todo, de nada amigos.</p>
             </div>
         </div>
         <!-- /.row -->
