--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; como te copies me chibo. copelia.xyz 2017</p>
                 </div>
             </div>
             <!-- /.row -->
