--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <div class="row">
         <div class="col-md-4">
           <ol class="">
-            <li>Libros</li>
-            <li>Autores</li>
-            <li>Sobre Nosotros</li>
+            <p>Libros</p>
+            <p>Autores</p>
+            <p>Sobre Nosotros</p>
           </ol>
         </div>
         <div class="col-md-8">
