--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 											</h4>
 										</div>
 										<div class="modal-body">
-											...
+											<img src="imgs/James Collins.gif">
 										</div>
 										<div class="modal-footer">
 											 
