--- a/index.html
+++ b/index.html
@@ -31,16 +31,22 @@
             <div class="col-md-12">
               <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner" role="listbox">
-                  <div class="carousel-item"> <img class="d-block img-fluid" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg" data-holder-rendered="true">
+                  <div class="carousel-item"> <img class="d-block img-fluid" src="imgs/libros chulos.jpg" data-holder-rendered="true">
                     <div class="carousel-caption">
-                      <h3>First slide label</h3>
-                      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                      <h3>Mira que portadas</h3>
+                      <p>nuestras portadas son las mas chulas.</p>
                     </div>
                   </div>
-                  <div class="carousel-item active"> <img class="d-block img-fluid" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg" data-holder-rendered="true">
+                  <div class="carousel-item active"> <img class="d-block img-fluid" src="imgs/flamealphabet.jpg" data-holder-rendered="true">
                     <div class="carousel-caption">
-                      <h3>Second slide label</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                      <h3>Mira nuestros libros</h3>
+                      <p>Nuestros libros son los mejores por dentro tambien.</p>
+                    </div>
+                  </div>
+		  <div class="carousel-item active"> <img class="d-block img-fluid" src="imgs/whered-you-go-bernadette.jpg" data-holder-rendered="true">
+                    <div class="carousel-caption">
+                      <h3>Ole</h3>
+                      <p>Y Ole.</p>
                     </div>
                   </div>
                 </div>
