--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
             <div class="col-md-12">
               <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner" role="listbox">
-                  <div class="carousel-item"> <img class="d-block img-fluid" src="imgs/libros chulos.jpg" data-holder-rendered="true">
+                  <div class="carousel-item"> <img class="d-block img-fluid" src="imgs/libros chulos.jpg"  max-height=500px data-holder-rendered="true">
                     <div class="carousel-caption">
                       <h3>Mira que portadas</h3>
                       <p>nuestras portadas son las mas chulas.</p>
                     </div>
                   </div>
-                  <div class="carousel-item active"> <img class="d-block img-fluid" src="imgs/flamealphabet.jpg" data-holder-rendered="true">
+                  <div class="carousel-item active"> <img class="d-block img-fluid" src="imgs/flamealphabet.jpg" max-height=500px data-holder-rendered="true">
                     <div class="carousel-caption">
                       <h3>Mira nuestros libros</h3>
                       <p>Nuestros libros son los mejores por dentro tambien.</p>
                     </div>
                   </div>
-		  <div class="carousel-item active"> <img class="d-block img-fluid" src="imgs/whered-you-go-bernadette.jpg" data-holder-rendered="true">
+		  <div class="carousel-item active"> <img class="d-block img-fluid" src="imgs/whered-you-go-bernadette.jpg" max-height=500px data-holder-rendered="true">
                     <div class="carousel-caption">
                       <h3>Ole</h3>
                       <p>Y Ole.</p>
