--- a/index.html
+++ b/index.html
@@ -29,51 +29,21 @@
         <div class="col-md-8">
           <div class="row">
             <div class="col-md-12">
-              <div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="imgs/libros chulos.jpg" alt="Chania">
-      <div class="carousel-caption">
-        <h3>Mira que tapas mas chulas</h3>
-        <p>molan!</p>
-      </div>
+             
+		    div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+      <img class="d-block img-fluid" src="imgs/libros chulos.jpg" alt="First slide">
     </div>
-
-    <div class="item">
-      <img src="flamealphabet.jpg" alt="Chicago">
-      <div class="carousel-caption">
-        <h3>lo de dentro esta super bien!</h3>
-        <p>Que bien escrito!</p>
-      </div>
+    <div class="carousel-item">
+      <img class="d-block img-fluid" src="imgs/flamealphabet.jpg" alt="Second slide">
     </div>
-
-    <div class="item">
-      <img src="whered-you-go-bernadette.jpg" alt="New York">
-      <div class="carousel-caption">
-        <h3>Ole!</h3>
-        <p>Y ole!</p>
-      </div>
+    <div class="carousel-item">
+      <img class="d-block img-fluid" src="imgs/whered-you-go-bernadette.jpg" alt="Third slide">
     </div>
   </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
+		    
           <div class="row">
            <div class="row">
 						<div class="col-md-4">
