--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="row">
             <div class="col-md-12">
              
-		    div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+		    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
       <img class="d-block img-fluid" src="imgs/libros chulos.jpg" alt="First slide">
